Bug 1657312 - Don't round clip rect. r=mstange, a=jcristau

Depends on D86088

Differential Revision: https://phabricator.services.mozilla.com/D87023